--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <li>BS Computer Science
             COMSATS University Islamabad, Pakistan
             <ul>
-                <li>(02/2022 - Present)</li>
+                <li>(Feb/2022 - Present)</li>
             </ul>
         </li>
         <li>Higher Secondary School Certificate
             The Quaid-e-Azam College for Boys Swabi
             <ul>
-                <li>(06/2018 - 08/2020)</li>
+                <li>(June/2018 - August/2020)</li>
                 <li>Marks: 978/1100 (88.90%)</li>
                 <li>Specialization:Pre-Medical</li>
             </ul>
